# sraft

./: .gitignore  Cargo.toml  README.md  build.rs  config1.toml  config2.toml  config3.toml  run.sh  run1.sh  run2.sh  run3.sh
proto/: api.proto  sraft.proto
src/: config.rs  grpc.rs  lib.rs  main.rs  sraft.rs
src/bench/: main.rs
src/scratch/: main.rs
src/sraft/: api.rs  mod.rs  state_machine.rs  storage.rs
