[package]
name = "sraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["full", "macros", "rt-multi-thread"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

