[package]
name = "sraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
fjall = "2.6.7"
prost = "0.12.6"
rand = "0.9.0"
rusqlite = "0.34.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full", "macros", "rt-multi-thread"] }
toml = "0.8.20"
tonic = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[[bin]]
name = "bench"
path = "src/bench/main.rs"

[[bin]]
name = "scratch"
path = "src/scratch/main.rs"
